--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,19 +1,47 @@
-@media (min-width:576px){
-    #course-card{
-        flex-wrap: wrap !important;
-        flex-basis: 40% !important;
-        justify-content: space-between !important;
-        margin-bottom: 20px !important;
-        max-width: 40%;
+.card-columns .card {
+    margin-bottom: 0.75rem;
+  }
+  /* @media (min-width: 576px) {
+    .card-columns {
+      -moz-column-count: 3;
+           column-count: 3;
+      -moz-column-gap: 1.25rem;
+           column-gap: 1.25rem;
+      orphans: 1;
+      widows: 1;
+    } */
+    @media (min-width: 576px) and (max-width: 767.98px) {
+      .card-columns {
+        -moz-column-count: 2;
+            column-count: 2;
+            -moz-column-gap: 0.75rem;
+            column-gap: 0.75rem;
+      }
     }
-}
-
-@media (min-width:1080px){
-    #course-card{
-        flex-wrap: wrap !important;
-        flex-basis: 30% !important;
-        justify-content: space-between !important;
-        margin-bottom: 20px !important;
-        max-width: 30%;
+    
+    @media (min-width: 768px) and (max-width: 991.98px) {
+      .card-columns {
+        -moz-column-count: 2;
+             column-count: 2;
+             -moz-column-gap: 0.50rem;
+            column-gap: 0.50rem;
+      }
     }
-}
+    
+    @media (min-width: 992px) and (max-width: 1199.98px) {
+      .card-columns {
+        -moz-column-count: 3;
+             column-count: 3;
+      }
+    }
+    
+    @media (min-width: 1200px) {
+      .card-columns {
+        -moz-column-count: 3;
+             column-count: 3;
+      }
+    }
+    .card-columns .card {
+      display: inline-block;
+      width: 100%;
+    }
